# gamla

./: .codespell_ignore  .flake8  .gitignore  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  update_doc_after_library_update.md
docs/: README.rst  conf.py  index.rst
docs/_build/doctrees/: README.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  README.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: .pre-commit-hooks.yaml  README.rst  api.rst  conf.py  index.rst  make_api.py  requirements.txt
gamla/: __init__.py  apply.py  apply_test.py  apply_utils.py  async_functional.py  construct.py  construct_test.py  currying.py  data.py  data_test.py  data_test_example.csv  data_test_example_with_headers.csv  data_test_example_without_headers.csv  debug.py  debug_utils.py  dict_utils.py  dict_utils_test.py  excepts.py  excepts_decorator.py  excepts_decorator_test.py  excepts_test.py  functional.py  functional_async.py  functional_generic.py  functional_test.py  graph.py  graph_async.py  graph_async_test.py  graph_test.py  hierarchical_index.py  hierarchical_index_test.py  higher_order.py  higher_order_test.py  immutable_set.py  immutable_set_test.py  introspection.py  io_utils.py  io_utils_test.py  json_tree.py  json_tree_test.py  (+14 more)
gamla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gamla/optimized/: async_functions.py  async_functions_test.py  sync.py  sync_test.py
(+2 files in other folders)
