[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamla"
version = "163"
description = "Functional programming library for Python."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "async-timeout",
    "dataclasses_json",
    "heapq_max",
    "httpx",
    "immutables",
    "pytest-asyncio",
    "pytest",
    "requests",
    "tabulate",
    "termcolor",
    "toolz",
    "yappi",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gamla*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
float_to_top = true
atomic = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = [
    "async_timeout",
    "dataclasses_json",
    "heapq_max",
    "httpx",
    "immutables",
    "pytest",
    "requests",
    "setuptools",
    "tabulate",
    "termcolor",
    "toolz",
    "yappi",
]
